--- a/index.css
+++ b/index.css
@@ -1,7 +1,52 @@
+/* styles.css */
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200vh;
+}
+
+.container {
+  max-width: 1000px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+header, footer {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h1 {
+  color: #0056b3;
+}
+
+h2 {
+  color: #007bff;
+}
+
+h3 {
+  color: #28a745;
+}
+
+p, ul {
+  line-height: 1.6;
+}
+
+ul {
+  list-style-type: disc;
+  margin-left: 20px;
+}
+
+strong {
+  color: #d9534f;
 }
 
 .logo {
@@ -10,53 +55,7 @@ body {
 }
 
 .logo img {
-  width: 500px;
-  height: 70px;
-}
-
-.organizador {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  padding: 50px;
-}
-
-.ventanas {
-  width: 300px;
-  background-color: #EEEEEE; /* Gris */
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-.ventanas img {
   width: 100%;
-  border-radius: 10px;
-  margin-bottom: 5px;
-}
-
-.ventanas h3 {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.ventanas p {
-  font-size: 14px;
-  margin-bottom: 5px;
-}
-
-.ventanas a {
-  display: inline-block;
-  background-color: #F2811D; /* Naranja */
-  color: #fff;
-  padding: 8px 16px;
-  border-radius: 3px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.ventanas a:hover {
-  background-color: #318AAC; /* Azul clarito */
+  max-width: 500px;
+  height: auto;
 }
